# terminal

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  install.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release-cli.yml
crates/bharatlink-cli/: Cargo.toml  README.md
crates/bharatlink-cli/src/: events.rs  main.rs
crates/bharatlink-core/: Cargo.toml  README.md
crates/bharatlink-core/src/: events.rs  lib.rs  manager.rs  protocols.rs  receive.rs  state.rs  storage.rs  types.rs  util.rs
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  bharatlink.rs  commands.rs  config.rs  main.rs  mcp.rs  monitor.rs  netops.rs  pty.rs  snippets.rs  ssh.rs  terminal.rs  wifi_scan.swift
src/components/: AIBar.tsx  Autocomplete.tsx  CommandPalette.tsx  MCPChat.tsx  MCPPanel.tsx  MonitorDashboard.tsx  Settings.tsx  ShortcutHelp.tsx  Sidebar.tsx  SnippetLibrary.tsx  StatusBar.tsx  TabBar.tsx  Terminal.tsx
src/components/bharatlink/: BharatLinkDashboard.tsx  InfoPanel.tsx  PeerPanel.tsx  QRModal.tsx  TopBar.tsx  TransferPanel.tsx  index.ts  types.ts  useBharatLinkData.ts
src/components/monitor/: BottomTicker.tsx  GlobeOverlays.tsx  LeftPanel.tsx  MonitorDashboard.tsx  RightPanel.tsx  TopBar.tsx  constants.ts  globeManager.ts  index.ts  types.ts  useMonitorData.ts  utils.ts
src/components/netops/: InfoPanel.tsx  NetopsDashboard.tsx  ResultPanel.tsx  ToolPanel.tsx  TopBar.tsx  index.ts  types.ts  useNetopsData.ts
src/effects/: CRTEffect.tsx  GlowEffect.tsx  HologramEffect.tsx  MatrixRain.tsx
src/hooks/: useAI.ts  useTerminal.ts  useTheme.ts
src/styles/: bharatlink.css  effects.css  global.css  monitor.css  netops.css  terminal.css
src/themes/: ThemeEngine.ts  cyberpunk.json  ghost-protocol.json  hacker-green.json  matrix.json  midnight.json  tron.json
