[package]
name = "flux-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
sysinfo = "0.31"

# Terminal
portable-pty = "0.8"

# AI
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "net"] }

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
toml = "0.8"

# Crypto (WPA2 key derivation for pcap generation)
sha1 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }

# BharatLink — P2P file & text sharing
iroh = { version = "0.95", features = ["discovery-local-network"] }
iroh-blobs = { version = "0.97", features = ["fs-store"] }
rand = "0.9"
futures-lite = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

