[package]
name = "flux-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
sysinfo = "0.31"

# Terminal
portable-pty = "0.8"

# AI
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
toml = "0.8"

# Crypto (WPA2 key derivation for pcap generation)
sha1 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }

# BharatLink — P2P file & text sharing (core library)
bharatlink-core = { path = "../crates/bharatlink-core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
