[package]
name = "bharatlink"
version = "0.2.0"
edition = "2021"
description = "P2P file & text sharing from your terminal"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rohitsainier/bharatlink"
readme = "README.md"
authors = ["Rohit Saini"]
keywords = ["p2p", "file-sharing", "quic", "iroh", "cli"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "bharatlink"
path = "src/main.rs"

[dependencies]
bharatlink-core = { path = "../bharatlink-core", version = "0.2.0" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
indicatif = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
