[package]
name = "bharatlink-core"
version = "0.2.0"
edition = "2021"
description = "P2P file & text sharing engine — QUIC + mDNS powered by iroh"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rohitsainier/bharatlink"
keywords = ["p2p", "file-sharing", "quic", "iroh", "lan"]
categories = ["network-programming"]
readme = "README.md"
authors = ["Rohit Saini"]

[dependencies]
iroh = { workspace = true }
iroh-blobs = { workspace = true }
tokio = { workspace = true }
futures-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
gethostname = "0.5"
